--- a/src/style.css
+++ b/src/style.css
@@ -68,6 +68,7 @@ body {
 .container {
     width: 95vw;
     margin: 1rem auto;
+    scroll-snap-type: y mandatory;
 }
 
 /* Hamburger styles */
@@ -157,6 +158,9 @@ section {
     margin: 1rem auto;
 }
 
+.child {
+    scroll-snap-align: center;
+}
 
 /* Home styles */
 .home {
@@ -209,7 +213,7 @@ section {
 /* Skills section styles */
 
 .skills__container {
-    margin-block: 3rem;
+    margin-block: 10rem;
 }
 
 .section__content {
@@ -253,17 +257,75 @@ section {
     scale: 1.1;
 }
 
+/* Contact Sstyles */
+.contact__container {
+    margin-block: 10rem;
+}
+
+.contact__content {
+    display: flex;
+    gap: 2rem;
+}
+
+.contact__desc {
+    font-family: IBMmono;
+    margin-block: 3rem;
+    width: 50%;
+}
+
+.contact__desc h2 {
+    margin-bottom: 3rem;
+}
+
+.contact__desc .phone, 
+.contact__desc .email {
+    font-size: 22px;
+    margin-block: 2rem;
+}
+
+.contact__form {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 3rem;
+}
+
+.contact__form input {
+    width: 80%;
+    padding: 0.75rem;
+    background: transparent;
+    border: none;
+    outline: none;
+    border-bottom: 1px solid var(--clr-gray);
+    font-family: mono-thin;
+}
+
+.contact__form textarea {
+    resize: none;
+    height: 15ch;
+    width: 80%;
+    padding: 0.75rem;
+    background: transparent;
+    border: none;
+    outline: none;
+    border-bottom: 1px solid var(--clr-gray);
+    font-family: mono-thin;
+}
 
 
 /* Media Queries */
 
 @media (max-width: 768px) {
 
+    /* Home Section */
     .home {
         flex-direction: column;
         padding-top: 5rem;
         text-align: center;
         justify-content: space-around;
+        gap: 3rem;
     }
 
     .home__left h3 {
@@ -282,7 +344,8 @@ section {
         font-size: 1rem;
         margin-block: 1.5rem;
     }
-    
+
+    /* Skills Section */
     .skills__icon {
         width: 4rem;
     }
@@ -300,5 +363,38 @@ section {
 
     .section__title {
         text-align: center;
+    }
+
+    /* Contact Section */
+    .contact__content {
+        flex-direction: column;
+    }
+
+    .contact__desc, .contact__form {
+        width: 100%;
+    }
+
+    .contact__desc h2 {
+        font-size: 1rem;
+    }
+
+    .contact__desc h2, 
+    .contact__desc .phone,
+    .contact__desc .email {
+        margin-block: 1.5rem;
+    }
+
+    .contact__desc p {
+        font-size: 0.8rem;
+    }
+
+    .contact__form input, 
+    .contact__form textarea {
+        width: 100%;
+        padding: 0.5rem;
+    }
+
+    .contact__form textarea {
+        height: 10ch;
     }
 }
